           the $COMBINE variable within calendar.php, format like:
           $COMBINE = array('class'=>array(3=>array('class', 'class')));
           Which will add two additional classes to the day that has "CLASS 3"
20161208 - Upgraded components:
           font-awesome 4.6.3 -> 4.7.0
           highlight.js 9.5.0 -> 9.8.0
20161209 - BUG FIX: Corrected issue where virtual file (access version)
           was not properly handling spaces as a delimiter.
20170303 - Upgraded components:
           highlight.js 9.8.0 -> 9.9.0
20170303 - Added <replace value=""> tag, uses $PAGE_MODIFY variable
20170303 - Added page click logging option, users $ACCESS_LOG variable
20170303 - BUG FIX: Correct issue where directory names were hard coded into page_main
20170415 - Added <url value="" default=""> tag, uses $_GET variable
           and remembers values via sessions
20170808 - Added <ace ...> tag, allows for new syntax highlighting with an
           editable interface.
20170809 - upgraded components:
           highlight.js 9.9.0 -> 9.12.0
20170826 - added <calphp src="phpfile.php"> tag, that will include the php file
           if it exists - this is dangerous but really useful
20170827 - changed all $_POST and $_GET variables to $_REQUEST
20171016 - Added auto-generated <replace> variables.
20171016 - Updated priorities, files in calendar/ will be read before root
           this supports a manual that is updated with patching
20171022 - Editing of files now supported (if web user has permissions)
         - Allow for sideview of html as typing
20171024 - removed option to set $COMPONETS, generated automatically
20171027 - Updated Security - Years are now taken into account for unlocking
           files.
20171028 - Initial Move to GITHUB!!!
20171030 - Updated Security - if the $ACCESS_FILE or $CLASS_FILE exist but 
           are unreadable, show an error and do not provided any files to
           the students.