@@ -99,6 +99,11 @@
 20171027 - Updated Security - Years are now taken into account for unlocking
            files.
 20171028 - Initial Move to GITHUB!!!
-20171030 - Updated Security - if the $ACCESS_FILE or $CLASS_FILE exist but 
+20171030 - Updated Security - if the $ACCESS_FILE or $CLASS_FILE exist but
            are unreadable, show an error and do not provided any files to
            the students.
+20171103 - BUG FIX: Updated directory read code to handle class event types that
+           only appear in $COMBINE
+         - Updated checks for access and virtual files.
+         - Added the ability to set $LOCK = true, or $LOCK=filename which will
+           prevent students from viewing content.
